# public/swagger/swagger.yaml
@@ -12,8 +12,8 @@ basePath: "/api"
 tags:
   - name: "Auth"
     description: "Everything about authentication on API"
-  - name: "store"
-    description: "Access to Petstore orders"
+  - name: "Agency"
+    description: "Everything about agency informations"
   - name: "user"
     description: "Operations about user"
 paths:
@@ -288,6 +288,91 @@ paths:
               type: "string"
               format: "date-time"
               description: "Time in UTC when token expires"
+
+  /agency:
+    get:
+      tags:
+        - "Agency"
+      summary: "Get agency user"
+      description: ""
+      operationId: "agency"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Agency"
+
+    post:
+      tags:
+        - "Agency"
+      summary: "Update agency informations"
+      description: ""
+      operationId: "agencyUpdate"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+
+        - name: "name"
+          in: "formData"
+          type: "string"
+          description: "Full name of the transit agency"
+
+        - name: "url"
+          in: "formData"
+          type: "string"
+          description: "URL of the transit agency"
+
+        - name: "timezone"
+          in: "formData"
+          type: "string"
+          description: "Timezone where the transit agency is located"
+
+        - name: "lang"
+          in: "formData"
+          type: "string"
+          description: "Primary language used by this transit agency"
+
+        - name: "phone"
+          in: "formData"
+          type: "string"
+          description: "A voice telephone number for the specified agency. This field is a string value that presents the telephone number as typical for the agency's service area. It can and should contain punctuation marks to group the digits of the number. Dialable text (for example, TriMet's '503-238-RIDE') is permitted, but the field must not contain any other descriptive text"
+
+        - name: "fare_url"
+          in: "formData"
+          type: "string"
+          description: "URL of a web page that allows a rider to purchase tickets or other fare instruments for that agency online"
+
+        - name: "email"
+          in: "formData"
+          type: "string"
+          description: "Email address actively monitored by the agency’s customer service department. This email address should be a direct contact point where transit riders can reach a customer service representative at the agency"
+
+      responses:
+        "200":
+          description: "Successful operation."
+        "400":
+          description: "Invalid input."
+        "500":
+          description: "The agency could not be updated."
 
   /pet/findByStatus:
     get:
@@ -768,6 +853,44 @@ securityDefinitions:
     name: "api_key"
     in: "header"
 definitions:
+  User:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      agency_id:
+        type: "integer"
+      type_id:
+        type: "integer"
+      name:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+    xml:
+      name: "User"
+
+  Agency:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      name:
+        type: "string"
+      timezone:
+        type: "string"
+      lang:
+        type: "string"
+      fare_url:
+        type: "string"
+      phone:
+        type: "string"
+      email:
+        type: "string"
+    xml:
+      name: "Agency"
+
   Order:
     type: "object"
     properties:
@@ -805,30 +928,7 @@ definitions:
         type: "string"
     xml:
       name: "Category"
-  User:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      username:
-        type: "string"
-      firstName:
-        type: "string"
-      lastName:
-        type: "string"
-      email:
-        type: "string"
-      password:
-        type: "string"
-      phone:
-        type: "string"
-      userStatus:
-        type: "integer"
-        format: "int32"
-        description: "User Status"
-    xml:
-      name: "User"
+
   Tag:
     type: "object"
     properties:
