# routes/api.php
@@ -1,8 +1,6 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-
 
 Route::get('/', function () {
     return response()->json(['message' => 'Entrou na API']);
@@ -15,13 +13,23 @@ Route::post('forget-password', 'AuthController@forgetPassword');
 
 // Authenticated Routes
 Route::middleware(['jwt.verify'])->group(function () {
+
+    // Auth
     Route::post('logout', 'AuthController@logout');
     Route::get('refresh', 'AuthController@refresh');
     Route::get('me', 'AuthController@getAuthenticatedUser');
     Route::post('change-password', 'AuthController@changePassword');
+
+    // Only admins
+    Route::middleware(['permissions.verify'])->group(function () {
+
+        Route::prefix('agency')->group(function(){
+            Route::get('', 'AgencyController@index');
+            Route::post('', 'AgencyController@update');
+        });
+
+
+//Route::resource('agency', 'AgencyController')->only(['index', 'update']);
+    });
+
 });
-
-
-//Route::middleware('auth:api')->get('/user', function (Request $request) {
-//    return $request->user();
-//});
